# moldeoplugins

./: .gitignore  .gitmodules  Makefile.am  buildpkg.sh  configure.ac  configure_osx.sh  control.amd64.11.10  install-opencv.sh
Effects/Assimp/: Makefile.am  assimp.cbp  assimplinux.cbp  assimposxleopard.cbp  configure.ac  installAssimp.sh  moEffectAssimp.cpp  moEffectAssimp.h
Effects/Camera/: Makefile.am  camera.cbp  cameralinux.cbp  cameraosxleopard.cbp  configure.ac  moEffectCamera.cpp  moEffectCamera.h
Effects/CubeMap/: configure.ac  cubemap.cbp
Effects/Democube/: configure.ac  democube.cbp  moEffectDemocube.cpp  moEffectDemocube.h
Effects/Draw/: configure.ac  draw.cbp
Effects/Grid/: Makefile  Makefile.am  configure.ac  grid.cbp  moEffectGrid.cpp  moEffectGrid.h
Effects/Grid/mapa/: mapax.mp
Effects/Grid/supereg/: pcx.cpp  pcx.h  sup3d.cpp  sup3d.h  suppal.cpp  suppal.h  suprand.cpp  suprand.h  tgrdutil.cpp  tgrdutil.h  tgrid.cpp  tgrid.h  tipos.cpp  tipos.h  tmapa.cpp  tmapa.h  tmotor.cpp  tmotor.h  trdrmap.cpp  trdrmap.h
Effects/IScreens/: configure.ac
Effects/Icon/: Makefile.am  configure.ac  icon.cbp  iconlinux.cbp  moEffectIcon.cpp  moEffectIcon.h
Effects/Icon3D/: configure.ac  icon3d.cbp  icon3dosxleopard.cbp  moEffectIcon3D.cpp  moEffectIcon3D.h
Effects/Image/: Makefile.am  configure.ac  image.cbp  imagelinux.cbp  moEffectImage.cpp  moEffectImage.h
Effects/ImageFlow/: configure.ac  imageflow.cbp
Effects/ImageFlow3D/: Makefile.am  configure.ac  imageflow3d.cbp  moEffectImageFlow3D.h
Effects/LightDrawing/: configure.ac  lightdrawing.cbp  lightdrawinglinux.cbp  lightdrawingosxleopard.cbp  moEffectLightDrawing.cpp
Effects/LightPercussion/: Makefile  Makefile.am  configure.ac  lightpercussion.cbp  moEffectLightPercussion.cpp  moEffectLightPercussion.h
Effects/Lights/: Makefile  configure.ac  lights.cbp
Effects/LiveDrawing2/: configure.ac  livedrawing2.cbp  livedrawing2osxleopard.cbp  moEffectLiveDrawing2.cpp  moEffectLiveDrawing2.h
Effects/LiveWriting/: livewriting.cbp  moEffectLiveWriting.cpp
Effects/Movie/: configure.ac  moEffectMovie.cpp  moEffectMovie.h  movie.cbp  movielinux.cbp
Effects/Painter/: configure.ac  moEffectPainter.cpp  painter.cbp  painterlinux.cbp
Effects/ParticlesFractal/: Makefile.am  configure.ac  launch_in_linux.sh  moEffectParticlesFractal.cpp  moEffectParticlesFractal.h
Effects/ParticlesSimple/: Makefile.am  configure.ac  doxygen.bat  moEffectParticlesSimple.cpp  moEffectParticlesSimple.h  particles3d.cbp  particlessimple.cbp  particlessimplelinux.cbp
Effects/ParticlesSimple/doc/: Doxyfile  Doxyfile.spanish
Effects/Partiture/: Makefile  configure.ac  moCNote.h  moCPentagram.cpp  moEffectPartiture.h  particlessimple.cbp
Effects/Plane/: Makefile.am  configure.ac  moEffectPlane.cpp  plane.cbp  planelinux.cbp
Effects/Protein/: configure.ac
Effects/RegularSolid/: Makefile  configure.ac  moEffectRegularSolid.cpp  moEffectRegularSolid.h  regularsolid.cbp  regularsolidlinux.cbp
Effects/SampleTest/: config.h.in  configure  configure.ac  moCalibrationGrid.cpp  sampletest.cbp  sampletestlinux.cbp
Effects/SampleTest3d/: Makefile.am  configure.ac  sampletest3d.cbp
Effects/Scene3D/: Makefile.am  configure.ac
Effects/Sound/: Makefile.am  configure.ac  moEffectSound.cpp  moEffectSound.h  sound.cbp  soundlinux.cbp
Effects/Sound3D/: Makefile.am  configure.ac  moEffectSound3D.cpp  moEffectSound3D.h  sound3d.cbp  sound3dlinux.cbp
Effects/Text/: configure.ac  text.cbp
Effects/Text3D/: configure.ac  moEffectText3D.cpp  moEffectText3D.h  text3d.cbp  text3dlinux.cbp
Effects/Tunel/: configure.ac  moEffectTunel.cpp  moEffectTunel.h  tunel.cbp
Effects/Webview/: Makefile.am  configure  configure.ac  install_awesomium.sh  install_ultralight.sh  moEffectWebview.cpp  moEffectWebview.h  webview.cbp  webviewlinux.cbp
IODevices/GPIO/: Makefile.am  configure.ac  gpio.cbp  gpio.depend  gpiolinux.cbp  moGPIO.cpp  moGPIO.h
IODevices/Keyboard/: Makefile.am  configure.ac  keyboard.cbp
IODevices/Kinect/: Platform.Arm.RPI3  configure.ac  install_OpenNI.sh  kinect.cbp  kinectlinux.cbp  moKinect.cpp  moKinect.h  moKinectUserGenerator.cpp
IODevices/KinectGPU/: configure.ac  kinectgpu.cbp  moKinect.h
IODevices/Midi/: Makefile.am  configure.ac  midi.cbp  midilinux.cbp  moMidi.cpp  moMidi.h
IODevices/Mixer/: Makefile.am  configure.ac  mixer.cbp  moMixer.cpp
IODevices/Mouse/: configure.ac  moMouse.h  mouse.cbp
IODevices/NetOscIn/: Makefile.am  commit_and_compile.sh  configure.ac  moNetOSCIn.cpp  moNetOSCIn.h  netoscin.cbp  netoscinlinux.cbp
IODevices/NetOscIn/ip/win32/: UdpSocket.cpp
IODevices/NetOscOut/: Makefile.am  configure.ac  moNetOSCOut.cpp  moNetOSCOut.h  netoscout.cbp  netoscoutlinux.cbp
IODevices/NetOscOut/ip/posix/: NetworkingUtils.cpp
IODevices/NetTUIOIn/: Makefile.am  configure.ac  moNetTUIOIn.cpp  moNetTUIOIn.h  nettuioin.cbp
IODevices/Ola/: Makefile.am  buildola.sh  configure.ac  moOla.cpp  moOla.h  ola.cbp  olalinux.cbp
IODevices/Serial/: configure.ac  serial.cbp
IODevices/Tablet/: Makefile.am  configure.ac  moTablet.cpp  moTablet.h  tablet.cbp
IODevices/TabletAsync/: Makefile.am  configure.ac  tabletasync.cbp  tabletasynclinux.cbp
MasterEffects/Channel/: Makefile.am  channel.cbp  channellinux.cbp  configure.ac  moMasterEffectChannel.cpp
MasterEffects/Ligia/: configure.ac  ligia.cbp
MasterEffects/MasterChannel/: configure.ac  masterchannel.cbp
MasterEffects/Panel/: configure.ac  panel.cbp  panellinux.cbp
MasterEffects/PresetPanel/: configure.ac  presetpanel.cbp
PostEffects/CalibrationGrid/: calibrationgrid.cbp  (+2 more)
PreEffects/Erase/: Makefile.am  aclocal.m4  buildpkg.sh  configure  configure.ac  erase.cbp  eraselinux.cbp  moPreEffectErase.cpp  moPreEffectErase.h  moldeo-erase-dev.install.amd64  moldeo-erase1.dirs.amd64
PreEffects/MirrorG/: Makefile.am  configure.ac  mirrorg.cbp  mirrorglinux.cbp  moPreEffectMirrorG.cpp
Resources/OpenCV/: Makefile.am  Makefile.am.osx  configure.ac  installOpenCV.sh  installOpenCV_OSX.sh  moOpenCV.cpp  moOpenCV.h  opencv.cbp  opencvlinux.cbp
(+846 files in other folders)
