lib_LTLIBRARIES = libmoldeo_lightpercussion.la
libmoldeo_lightpercussion_la_SOURCES = moEffectLightPercussion.cpp moEffectLightPercussion.h
libmoldeo_lightpercussion_la_CPPFLAGS = ${LIBMOLDEO_CFLAGS}
libmoldeo_lightpercussion_la_LDFLAGS =
libmoldeo_lightpercussion_la_LIBADD = 
libmoldeo_lightpercussion_la_LIBS = ${LIBMOLDEO_LIBS}

moduletype = effects
datadir = ${prefix}/share/moldeo
modulesdir = ${exec_prefix}/lib/moldeo
libdir = ${modulesdir}/${moduletype}
docdir = ${prefix}/share/doc/moldeo

AM_CPPFLAGS = -DDATADIR=\"$(datadir)\" -DMODULESDIR=\"$(modulesdir)\"
ACLOCAL_AMFLAGS=-I m4

